--- a/package.json
+++ b/package.json
@@ -36,13 +36,17 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "express-rate-limit": "^8.1.0",
     "input-otp": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.18.1",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
@@ -54,15 +58,19 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "validator": "^13.15.15",
     "vaul": "^1.1.2",
     "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongo-sanitize": "^1.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/validator": "^13.15.3",
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
     "prettier": "^3.6.2",
