--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "motion": "^12.23.15",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "quill": "^2.0.3",
     "react": "19.1.0",
     "react-day-picker": "^9.10.0",
@@ -75,6 +76,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongo-sanitize": "^1.0.3",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/validator": "^13.15.3",
